
syntax = "proto3";

import "google/protobuf/any.proto";

package everchanging.truths_lies_generator;

service TruthsLiesGeneratorService {
    rpc Generate(GenerateRequest) returns (GenerateResponse);
    rpc GeneratePartitioned(GenerateRequest)
        returns (GeneratePartitionedResponse);
};

message GenerateRequest {
    repeated TruthsLiesConfig config = 1;
    int64 truths_count = 2;
    int64 lies_count = 3;
};

message GenerateResponse {
    repeated Statement statements = 1;
};

message GeneratePartitionedResponse {
    repeated Statement truths = 1;
    repeated Statement lies = 2;
};

message Statement {
    string statement = 1;
    bool truth = 2;
};

message ValueMap {
    message Value {
        oneof value {
            google.protobuf.Any any_value = 1;
            int64 int_value = 2;
            double double_value = 3;
            string string_value = 4;
        };
    };
    map<string, Value> values = 1;
};

message TruthsLiesConfig {
    // A string to define the template of the truth or lie; use { and } to
    // indicate replacement strings. Example: "The time is {time}."
    string template_string = 1;

    // The name of the class for this configuration.
    string class_name = 2;

    // The list of key/value mappings for the input to the functions.
    repeated ValueMap arguments = 3;
};

